--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,31 @@
-<h1>Hello world</h1>
-<p>A seguir serão divididas as atividades em algumas seções</p>
-<calcular-media></calcular-media>
-<br>
-<calculadora></calculadora>
-<br>
-<cadastro></cadastro>
-<br>
-<apolice-seguro></apolice-seguro>
+<nav class="navbar bg-dark">
+    <div class="container-fluid ">
+      <span class="navbar-brand mb-0 h1 text-bg-dark p-3 ">Angular Introductions</span>
+      <a target="_blank" href="https://github.com/DaviSNascimento/Angular_Introductions" class="btn btn-primary" role="button" aria-disabled="true">see on Github</a>
+    </div>
+  </nav>
+  <main class="p-3 bg-body-secondary">
+    <div class="container text-center">
+        <div class="row">
+          <div class="col">
+
+        <calculadora></calculadora>
+    </div>
+
+    <div class="col">    
+        <calcular-media></calcular-media>
+    </div>
+    <div class="col">
+        <cadastro></cadastro>
+    </div>
+   
+    <div class="col">
+        <apolice-seguro></apolice-seguro>
+    </div>
+</div>
+</div>
+</main>
+
+      
+      
+      
